<?xml version="1.0"?>
<!--

    Copyright (c) 2011, 2025 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.glassfish.jersey.incubator</groupId>
        <artifactId>project</artifactId>
        <version>4.0.99-SNAPSHOT</version>
    </parent>

    <groupId>org.glassfish.jersey.media</groupId>
    <artifactId>html-json</artifactId>

    <name>jersey-media-html-json</name>

    <description>
        JAX-RS Reader/Writer via net.java.html.json library that provides
        JSON serialization and deserialization using lightweight (no reflection)
        net.java.html.json library. Define your objects via @Model annotation.
        Use them in Jersey.
    </description>

    <properties>
        <net.java.html.version>1.8.1</net.java.html.version>
        <enforcer.skip>true</enforcer.skip>
        <surefire.coverage.argline>
            --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
            --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
            --add-exports org.glassfish.jersey.core.common/org.glassfish.jersey.innate=ALL-UNNAMED
            --add-exports org.glassfish.jersey.core.common/org.glassfish.jersey.innate.virtual=ALL-UNNAMED
            --add-reads org.glassfish.jersey.incubator.html.json=org.glassfish.jersey.core.server
            --add-reads org.glassfish.jersey.incubator.html.json=org.glassfish.jersey.tests.framework.core
            --add-reads org.glassfish.jersey.incubator.html.json=org.glassfish.jersey.tests.framework.provider.grizzly
            --add-reads org.glassfish.jersey.incubator.html.json=org.junit.jupiter.api
            --add-modules=ALL-MODULE-PATH
        </surefire.coverage.argline>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.netbeans.html</groupId>
            <artifactId>net.java.html.json</artifactId>
            <version>${net.java.html.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <version>RELEASE160</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.test-framework</groupId>
            <artifactId>jersey-test-framework-core</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
            <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <!--<dependency>
            <groupId>org.glassfish.jersey.connectors</groupId>
            <artifactId>jersey-apache-connector</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>-->
        <dependency>
            <groupId>org.netbeans.html</groupId>
            <artifactId>ko-ws-tyrus</artifactId>
            <version>${net.java.html.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.glassfish.grizzly</groupId>
                    <artifactId>grizzly-framework</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.glassfish.grizzly</groupId>
                    <artifactId>grizzly-http-server</artifactId>
                </exclusion>
            </exclusions>
            <scope>runtime</scope>
        </dependency>
        <!-- Overwrite Grizzly dependency defined in ko-ws-tyrus -->
        <dependency>
            <groupId>org.glassfish.grizzly</groupId>
            <artifactId>grizzly-framework</artifactId>
            <version>${grizzly2.version}</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.build.directory}/legal</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <!-- compile everything to ensure module-info contains right entries -->
                            <release>11</release>
                            <compilerArgs>
                                <arg>--add-reads</arg>
                                <arg>org.glassfish.jersey.incubator.html.json=ALL-UNNAMED</arg>
                                <arg>-Xdiags:verbose</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <inherited>true</inherited>
                <configuration>
                    <instructions>
                        <Automatic-Module-Name>org.glassfish.jersey.incubator.html.json</Automatic-Module-Name>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
